backends/liquid/anvil-liquid-derive/tests/compile_fail/missing_path_value.stderr
error: expected `=`
 --> tests/compile_fail/missing_path_value.rs
  |
  | #[template(path)]  // Missing path value
  |                ^
